Fixed gap issues in footer

--- a/front-end/src/Components/Footer/footer.module.css
+++ b/front-end/src/Components/Footer/footer.module.css
@@ -56,6 +56,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    row-gap: 0.6rem;
     min-width: 180px;
     opacity: 0;
     overflow: hidden;
@@ -66,7 +67,7 @@
 .show {
     
     opacity: 1;
-    max-height: 110px;
+    max-height: 140px;
 }
 
 .weblink {
@@ -105,6 +106,7 @@
 
     .websiteLinks {
         flex-direction: column;
+        gap: 14px;
     }
 
     .footer p, .weblink,
